--- a/ninja/index.html
+++ b/ninja/index.html
@@ -1,46 +1,57 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/ninjachat.css">
-    <script src="js/lib/jquery-1.12.1.min.js"></script>
-    <script src="js/lib/bootstrap.min.js"></script>
-    <link rel="shortcut icon" href="imagens/icons/ninjaIcon.png" >
-    <script src="js/lib/angular.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/ninja/NinjaController.js"></script>
-    <script src="js/ninja/NinjaService.js"></script>
-    <title>Ninja Chat</title>
- </head>
-<body ng-app = "Ninja" ng-controller="NinjaController">
-  <div class="container-fluid">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="navbar navbar-inverse navbar-fixed-top">
-                <div class="container-fluid">
-                    <ul class="nav navbar-nav">
-                    <li><a href=""><span class="glyphicon glyphicon-align-justify"></span></a></li>
-                    <li class="active"><a href=""><span class="glyphicon glyphicon-home"></span></a></li>
-                    <li><a href=""><span class="glyphicon glyphicon-search"></span></a></li>
-                    <li><a href=""><span class="glyphicon glyphicon-user"></span></a></li>
-                    <li><a href=""><span class="glyphicon glyphicon-comment"></span></a></li>
-                    </ul>
-                </div>                    
+   <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+      <link rel="stylesheet" type="text/css" href="css/ninjachat.css">
+      <script src="js/lib/jquery-1.12.1.min.js"></script>
+      <script src="js/lib/bootstrap.min.js"></script>
+      <link rel="shortcut icon" href="imagens/icons/ninjaIcon.png" >
+      <script src="js/lib/angular.js"></script>
+      <script src="js/app.js"></script>
+      <script src="js/ninja/NinjaController.js"></script>
+      <script src="js/ninja/NinjaService.js"></script>
+      <title>Ninja Chat</title>
+   </head>
+   <body ng-app = "Ninja" ng-controller="NinjaController">
+      <div class="container-fluid">
+         <div class="row">
+            <div class="col-md-12">
+               <div class="navbar navbar-inverse navbar-fixed-top">
+                  <div class="container-fluid">
+                     <ul class="nav navbar-nav">
+                        <li ng-click="openSwipe()"><a href=""><span class="glyphicon glyphicon-align-justify"></span></a></li>
+                        <li class="active"><a href=""><span class="glyphicon glyphicon-home"></span></a></li>
+                        <li><a href=""><span class="glyphicon glyphicon-search"></span></a></li>
+                        <li><a href=""><span class="glyphicon glyphicon-user"></span></a></li>
+                        <li><a href=""><span class="glyphicon glyphicon-comment"></span></a></li>
+                     </ul>
+                  </div>
+               </div>
             </div>
-        </div>
-    </div>
-     <div >
-    <div class="row">
-        <div class="col-12">
-            <div class="content">
-                <img id="fotoPerfil" class="visible-xs" height="300px" width="300px" ng-src="{{fotoPerfil}}"/>
+         </div>
+         <div>
+            <div class="row">
+               <div class="col-12">
+                  <div class="content">
+                  </div>
+               </div>
             </div>
-        </div>
-    </div>
-  </div>
-</body>
+            <div id="swipe" class="closed">
+               <a class="swipe-action">
+               <span class="glyphicon glyphicon-arrow-rigth"></span>
+               Voltar
+               </a>
+               <div class="container-fluid">
+                 <div class="col-md-4">
+                    <img id="fotoPerfil" class="redondo fotoPerfil" ng-src="{{fotoPerfil}}"/>
+                    <p class="nomeUser inline">{{nome}}</p>
+                 </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </body>
 </html>
-    
