--- a/ninja/index.html
+++ b/ninja/index.html
@@ -6,52 +6,48 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
       <link rel="stylesheet" type="text/css" href="css/ninjachat.css">
+      <link rel="stylesheet" href="css/materialize.css">
       <script src="js/lib/jquery-1.12.1.min.js"></script>
+      <script src="js/lib/materialize.js"></script>
       <script src="js/lib/bootstrap.min.js"></script>
       <link rel="shortcut icon" href="imagens/icons/ninjaIcon.png" >
       <script src="js/lib/angular.js"></script>
       <script src="js/app.js"></script>
       <script src="js/ninja/NinjaController.js"></script>
       <script src="js/ninja/NinjaService.js"></script>
+       <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+        <script src="js/lib/nouislider.min.js" type="text/javascript"></script>
+        <script src="js/lib/bootstrap-datepicker.js" type="text/javascript"></script>
+
       <title>Ninja Chat</title>
    </head>
    <body ng-app = "Ninja" ng-controller="NinjaController">
-      <div class="container-fluid">
-         <div class="row">
-            <div class="col-md-12">
-               <div class="navbar navbar-inverse navbar-fixed-top">
-                  <div class="container-fluid">
-                     <ul class="nav navbar-nav">
-                        <li ng-click="openSwipe()"><a href=""><span class="glyphicon glyphicon-align-justify"></span></a></li>
-                        <li class="active"><a href=""><span class="glyphicon glyphicon-home"></span></a></li>
-                        <li><a href=""><span class="glyphicon glyphicon-search"></span></a></li>
-                        <li><a href=""><span class="glyphicon glyphicon-user"></span></a></li>
-                        <li><a href=""><span class="glyphicon glyphicon-comment"></span></a></li>
-                     </ul>
+
+                  <div class="test"></div>
+
+            <ul id="slide-out" class="side-nav">
+               <li>
+                  <div class="user-view">
+                     <div class="background">
+                        <img ng-src="{{cover}}">
+                     </div>
+                     <a href="#!user"><img class="circle" ng-src="{{fotoPerfil}}"></a>
+                     <a href="#!name"><span class="white-text name"><strong>{{nome}}</strong></span></a>
                   </div>
-               </div>
-            </div>
-         </div>
-         <div>
-            <div class="row">
-               <div class="col-12">
-                  <div class="content">
-                  </div>
-               </div>
-            </div>
-            <div id="swipe" class="closed">
-               <a class="swipe-action">
-               <span class="glyphicon glyphicon-arrow-rigth"></span>
-               Voltar
-               </a>
+               </li>
+               <li><a href="#!"><span class="white-text name"><strong>Link 1</strong></span></a>
+               <li><a href="#!"><span class="white-text name"><strong>Link 2</strong></span></a>
+            </ul>
+            <div class="navbar navbar-inverse navbar-fixed-top">
                <div class="container-fluid">
-                 <div class="col-md-4">
-                    <img id="fotoPerfil" class="redondo fotoPerfil" ng-src="{{fotoPerfil}}"/>
-                    <p class="nomeUser inline">{{nome}}</p>
-                 </div>
+                  <ul class="nav navbar-nav">
+                     <li><a href="" data-activates="slide-out" class="button-collapse"><span class="glyphicon glyphicon-align-justify"></span></a></li>
+                     <li class="active"><a href="" ><span class="glyphicon glyphicon-home"></span></a></li>
+                     <li><a href=""><span class="glyphicon glyphicon-search"></span></a></li>
+                     <li><a href=""><span class="glyphicon glyphicon-user"></span></a></li>
+                     <li><a href=""><span class="glyphicon glyphicon-comment"></span></a></li>
+                  </ul>
                </div>
             </div>
-         </div>
-      </div>
    </body>
 </html>
