--- a/ninja/login.html
+++ b/ninja/login.html
@@ -1,62 +1,109 @@
-<html>
-    <head>
-        <title>Ninja</title>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
+  <link rel="icon" type="image/png" href="../assets/img/favicon.png">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+
+  <title>Login Ninja</title>
+
+  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
         <script src="js/lib/angular.js"></script>
-        <link rel="stylesheet" type="text/css" href="css/ninjachat.css">
-        <script src="js/lib/jquery-1.12.1.min.js"></script>
-        <script src="js/lib/bootstrap.min.js"></script>
         <script src="js/app.js"></script>
         <script src="js/login/LoginController.js"></script>
         <script src="js/login/LoginService.js"></script>
-    </head>
-    <body>
-      <div class="page">
-        <div id="fb-root"></div>
-        <div ng-app = "Login" ng-controller="LoginController">
-            <div class="container">
-              <div class = "row">
-                <div class="col-md-12 loginImage visible-xs">
-                <img class ="imgLog"src="imagens/Login.png" width="82%" height="380px">
+
+  <!--     Fonts and icons     -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+
+  <!-- CSS Files -->
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/login.css" rel="stylesheet" />
+    <link href="css/material-kit.css" rel="stylesheet"/>
+
+</head>
+
+<body class="signup-page">
+
+   <div class="wrapper">
+   <div id="fb-root"></div>
+   <div ng-app = "Login" ng-controller="LoginController">
+    <div class="header header-filter" style="background-image: url('imagens/city.jpg'); background-size: cover; background-position: top center;">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
+            <div class="card card-signup">
+              <form class="form" method="" action="">
+                <div class="header header-login text-center">
+                  <h4>Logue com o Facebook</h4>
+                  <div class="social-line">
+                    <button ng-click="FBLogin()" class="btn btn-simple btn-just-icon">
+                      <i class="fa fa-facebook-square"></i>
+                    </button>
+                  </div>
                 </div>
-                <div class="col-md-12 loginContentM visible-xs">
-                    <form id="formContato" class="form-horizontal" method="post">
-                      <div class="control-group form-group">
-                        <div class="controls">
-                          <input class="inputLogin" type="text" name="usuario" maxlength="50" placeholder="Telefone, email ou nome de usuario" />
-                        </div>
-                      </div>
-                      <div class="control-group form-group">
-                        <div class="controls">
-                          <input class="inputLogin"  type="password" name="senha" maxlength="50" placeholder="Senha"/>
-                        </div>
-                      </div>
-                      <div class="form-actions form-group">
-                        <button class="listaamigos" ng-click="getAmigosBackend()">
-                      </div>
-                  </form>                  
-                </div>
-                <div class="col-md-12 forgotLogin visible-xs">
-                   <p>Esqueceu seu login ou senha?<strong> Nos te ajudamos</strong></p>
-                </div>
-                <div class="col-md-12 forgotLogin visible-xs">
-                   <h1>OU</h1>
-                </div>
-                <div class="fb-login-button col-md-12 visible-xs">
-                  <button class="fbLogin" ng-click="FBLogin()">
-                    <span>
-                      <img class="fbImg" src="https://www.facebook.com/rsrc.php/v3/yO/r/lF-L3veiXx9.png" width="70px">
+                <p class="text-divider">Ou com seu Email</p>
+                <div class="content">
+
+                  <div class="input-group">
+                    <span class="input-group-addon">
+                      <i class="material-icons">face</i>
                     </span>
-                    <p>Logar com o Facebook</p>
-                  </button>
+                    <input type="text" class="form-control" placeholder="Login...">
+                  </div>
+
+                  <div class="input-group">
+                    <span class="input-group-addon">
+                      <i class="material-icons">lock_outline</i>
+                    </span>
+                    <input type="password" placeholder="Password..." class="form-control" />
+                  </div>
+
+                  <!-- If you want to add a checkbox to this form, uncomment this code
+
+                  <div class="checkbox">
+                    <label>
+                      <input type="checkbox" name="optionsCheckboxes" checked>
+                      Subscribe to newsletter
+                    </label>
+                  </div> -->
                 </div>
-                <div class="col-md-12 visible-xs">
-                  <hr>
-                  <p class="signup">Nao tem uma conta? <strong>Cadastre-se.</strong></p>
+                <div class="footer text-center">
+                  <a class="btn btn-simple btn-danger btn-login btn-lg">Login</a>
                 </div>
-              </div>
+              </form>
             </div>
-            
+          </div>
         </div>
       </div>
-    </body>
+
+      <footer class="footer">
+            <div class="container text-center">
+               <a class="btn btn-simple btn-white btn-lg ">Não tem conta? Cadastre-se</a>
+            </div>
+        </footer>
+
+    </div>
+    </div>
+    </div>
+
+
+</body>
+  <!--   Core JS Files   -->
+  <script src="js/lib/jquery.min.js" type="text/javascript"></script>
+  <script src="js/lib/bootstrap.min.js" type="text/javascript"></script>
+  <script src="js/lib/material.min.js"></script>
+
+  <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
+  <script src="js/lib/nouislider.min.js" type="text/javascript"></script>
+
+  <!--  Plugin for the Datepicker, full documentation here: http://www.eyecon.ro/bootstrap-datepicker/ -->
+  <script src="js/lib/bootstrap-datepicker.js" type="text/javascript"></script>
+
+  <!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
+  <script src="js/lib/material-kit.js" type="text/javascript"></script>
+
 </html>
