--- a/ninja/index.html
+++ b/ninja/index.html
@@ -18,40 +18,57 @@
       <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
       <script src="js/lib/nouislider.min.js" type="text/javascript"></script>
       <script src="js/lib/bootstrap-datepicker.js" type="text/javascript"></script>
-
+      <script src="//production-assets.codepen.io/assets/common/stopExecutionOnTimeout-b2a7b3fe212eaa732349046d8416e00a9dec26eb7fd347590fbced3ab38af52e.js"></script><script src="//code.jquery.com/jquery-2.1.2.min.js"></script><script src="//cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/js/materialize.min.js"></script>
       <title>Ninja Chat</title>
    </head>
-   <body ng-app = "Ninja" ng-controller="NinjaController">
-
-         <ul id="slide-out" class="side-nav">
-            <li>
-               <div class="user-view">
-                  <div class="background">
-                     <img ng-src="{{cover}}">
-                  </div>
-                  <a href="#!user"><img class="circle" ng-src="{{fotoPerfil}}"></a>
-                  <a href="#!name"><span class="white-text name"><strong>{{nome}}</strong></span></a>
+   <body ng-app = "Ninja" ng-controller="NinjaController" >
+      <ul id="slide-out" class="side-nav">
+         <li>
+            <div class="user-view">
+               <div class="background">
+                  <img ng-src="{{cover}}">
                </div>
-            </li>
-            <li><a href="#!"><span class="white-text name"><strong>Link 1</strong></span></a>
-            <li><a href="#!"><span class="white-text name"><strong>Link 2</strong></span></a>
-         </ul>
-         <div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container-fluid">
-               <ul class="nav navbar-nav">
-                  <li><a href="" data-activates="slide-out" class="button-collapse"><span class="glyphicon glyphicon-align-justify"></span></a></li>
-                  <li class="active"><a href="" ><span class="glyphicon glyphicon-home"></span></a></li>
-                  <li><a href=""><span class="glyphicon glyphicon-search"></span></a></li>
-                  <li><a href=""><span class="glyphicon glyphicon-user"></span></a></li>
-                  <li><a href=""><span class="glyphicon glyphicon-comment"></span></a></li>
+               <a href="#!user"><img class="circle" ng-src="{{fotoPerfil}}"></a>
+               <a href="#!name"><span class="white-text name"><strong>{{nome}}</strong></span></a>
+            </div>
+         </li>
+         <li><a href="#!"><span class="white-text name"><strong>Link 1</strong></span></a>
+         <li><a href="#!"><span class="white-text name"><strong>Link 2</strong></span></a>
+      </ul>
+      <div class="wrapper">
+         <nav id="menus" class="nav-extended navbar-fixed-top black">
+            <div class="nav-wrapper">
+               <a href="#!user" data-activates="slide-out" class="button-collapse"><img class="circle" ng-src="{{fotoPerfil}}" style=" width: 40px; margin: 10px 0px 10px -10px"></a>
+            </div>
+            <div class="nav-content">
+               <ul id="tabs-swipe-demo" class="tabs tabs-transparent">
+                  <li class="tab col s3"><a href="#test-swipe-1" style="text-decoration: none"><i class="material-icons">home</i></a></li>
+                  <li class="tab col s3"><a href="#test-swipe-2" style="text-decoration: none"><i class="material-icons">search</i></a></li>
+                  <li class="tab col s3"><a href="#test-swipe-3" style="text-decoration: none"><i class="material-icons" >person</i></a></li>
+                  <li class="tab col s3"><a href="#test-swipe-4" style="text-decoration: none"><i class="material-icons" >message</i></a></li>
                </ul>
             </div>
-         </div>
-         <div class="container-fluid feed">
-               <div class="row" ng-repeat="x in feed">
-                  <h5 class="pergunta">{{x.pergunta}}</h5>
-                  <h5 class="resposta">{{x.resposta}}</h5>
-               </div>
-         </div>
+         </nav>
+         <div id="test-swipe-1" class="col s12 blue" style="height:100vh; width: 100%">Test 1</div>
+         <div id="test-swipe-2" class="col s12 red" style="height:100vh; width: 100%">Test 2</div>
+         <div id="test-swipe-3" class="col s12 green" style="height:100vh; width: 100%">Test 3</div>
+         <div id="test-swipe-4" class="col s12 yellow" style="height:100vh; width: 100%">Test 4</div>
+
+         <div id="padding" class="col s12 yellow" style="height:100vh; width: 100%">Test 4</div>
+      </div>
    </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
