--- a/ninja/index.html
+++ b/ninja/index.html
@@ -9,7 +9,8 @@
       <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-touch-events/1.0.5/jquery.mobile-events.js"></script>
       <link rel="shortcut icon" href="imagens/icons/ninjaIcon.png" >
-      <script src="js/lib/angular.js"></script>
+      <script src="js/lib/angular.js"></script>      
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
       <script src="js/app.js"></script>
       <script src="js/ninja/NinjaController.js"></script>
       <script src="js/ninja/NinjaService.js"></script>
@@ -22,7 +23,7 @@
          <li>
             <div class="user-view">
                <div class="background" style="height: 90px;">
-                  <img ng-src="{{cover}}">
+                  <img ng-src="{{cover}}" style=" display: block; margin-top: auto;">
                </div>
                <a href="#!user"><img class="circle" ng-src="{{fotoPerfil}}" ng-click="OpenSideNavThroughLeftSwipe()"></a>
                <a href="#!name"><span class="white-text name"><strong>{{nome}}</strong></span></a>
@@ -47,13 +48,32 @@
                </div>
             </nav>
          </div>
-            <div id="test-swipe-1" class="col s12 blue" style="  width: 100%">Test 1</div>
-            <div id="test-swipe-2" class="col s12 red" style=" width: 100%">Test 2</div>
-            <div id="test-swipe-3" class="col s12 green" style=" width: 100%">Test 3</div>
-            <div id="test-swipe-4" class="col s12 yellow" style=" width: 100%">Test 4</div>
+         <div id="test-swipe-1" class="col s12 blue" style="  width: 100%">
+            <div class="question">
+               
+            </div>
          </div>
-      </div>
-      <div class=" col s12 yellow" style="height:100vh; width: 100%">Test 4</div>
+         <div id="test-swipe-2" class="col s12 red" style=" width: 100%">Test 2</div>
+         <div id="test-swipe-3" class="col s12 green" style=" width: 100%">Test 3</div>
+         <div id="test-swipe-4" class="col s12 yellow" style=" width: 100%">Test 4</div>
+         <div class="fixed-action-btn">
+            <a class="btn-floating btn-large black raised waves-effect waves-light btn" href="#modal-question">
+               <i class="large material-icons">mode_edit</i>
+            </a>
+         </div>
+         <div id="modal-question" class="modal modal-fixed-footer" style=" max-height:100% !important; width:100%; height:100%;">
+            <div class="modal-header white black-text">
+               <a href="#!" class="white black-text waves-effect waves-light modal-action modal-close" style=" margin-top: -30px;"><i class=" large material-icons" style="font-size: 2rem; padding:12px;">clear</i></a>
+               <a href="#!user" class="button-collapse"><img class="circle" ng-src="{{fotoPerfil}}" style=" width: 40px; margin: 15px 0px 0px 200px"></a>
+            </div>
+            <div class="modal-content white">
+               <textarea id="textarea1" class="materialize-textarea" rows="100" placeholder="Ask Anything for Anyone"></textarea>
+            </div>
+            <div class="modal-footer white">
+               <a href="#!" class="black waves-effect waves-light btn"><i class=" large material-icons" style="font-size: 2.2rem;">image</i></a>
+               <a href="#!" class="black waves-effect waves-light btn">ASK<i class="material-icons right">question_answer</i></a>
+            </div>
+         </div>
 </body>
 </html>
    </body>
